<feature> Implement module import functionality in the interpreter and parser

--- a/interpreter.cabal
+++ b/interpreter.cabal
@@ -15,6 +15,7 @@ library
   exposed-modules: Interpreter, SimpleParser
   build-depends:
     , parsec
+    , directory
     , containers
     , mtl 
     , text
