<task> Migrate to megaparsec, remove unnecessary comment handling and add option to print ast as optional

--- a/interpreter.cabal
+++ b/interpreter.cabal
@@ -14,7 +14,7 @@ library
   hs-source-dirs: src
   exposed-modules: Interpreter, SimpleParser
   build-depends:
-    , parsec
+    , megaparsec
     , directory
     , containers
     , mtl 
